--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 			<version>3.0.2</version>
 		</dependency>
 
-		<!-- Test -->
+		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
