--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+
 		<!-- Jakarta Persistence (JPA) and Validation -->
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
